# Toll

./: .gitignore  README.md  index.html  package.json  styles.css  vite.config.js
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/plugin/scrcpy/: output.txt
src-tauri/src/: main.rs
src-tauri/src/midi_handle/: ffmpeg_util.rs  midi_parse.rs  mod.rs
src-tauri/src/resource_manage/: mod.rs  resource_read.rs
src-tauri/src/scrcpy/: adb.rs  mod.rs  scrcpy_call.rs
src-tauri/src/util/: env_util.rs
src-tauri/src/windows_interface/: glob_event.rs  hidden_proecss.rs  ip_config.rs  mod.rs  route.rs
src/assets/: jsonListOptions.json
src/comm/: commUtil.js
src/components/: Container.vue  Menu.vue  NotFoundPage.vue
src/pubilic/part/jsonFormat/: JsonView.vue
src/pubilic/part/jsonList/: JsonListView.vue
src/pubilic/part/jsonList/part/: ConfigButton.vue
src/pubilic/part/routeChange/: RouteView.vue
src/pubilic/part/scrcpyLink/: ScrcpyView.vue
src/pubilic/part/sprite/: Sprite.vue
src/pubilic/router/: router.js
