[package]
name = "toll"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["process-command-api", "windows7-compat", "window-close", "window-unminimize", "window-start-dragging", "window-minimize", "window-hide", "window-show", "window-unmaximize", "window-maximize", "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
encoding = "0.2.33"
regex = "1.10.4"
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi", "winbase", "handleapi", "synchapi", "namedpipeapi"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
base64 = "0.22.1"
chrono = "0.4.38"
rdev =  { version = "0.5.3", features = ["unstable_grab"] }
lazy_static = "1.4.0"
midly = "0.5.3"
image = "0.25.5"
tempfile = "3.3.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
